--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link
+   
       rel="icon"
       href="https://img.icons8.com/officel/16/000000/globe-earth.png"
     />
@@ -17,6 +18,7 @@
     <link
       href="https://fonts.googleapis.com/css2? family=Overpass:wght@100&display=swap"
       rel="stylesheet"
+      <script src="https://kit.fontawesome.com/ad673212e6.js" crossorigin="anonymous"></script>
     />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
